k8s-yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-httpserver
spec:
  selector:
    app: my-httpserver
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: my-httpserver
      protocol: TCP
      port: 80
      targetPort: http
