k8s-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-my-httpserver-ingress
spec:
  tls:
    - hosts:
        - myhttpserver.hotmindshare.com
      secretName: myhttpserver.hotmindshare.com
  rules:
    - host: myhttpserver.hotmindshare.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-httpserver
                port:
                  number: 80
